plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '2.1.21'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cc.thonly'
version = '0.0.1-SNAPSHOT'
description = 'HorainingyouBot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://maven.aliyun.com/repository/public'
    }
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation 'com.google.guava:guava:32.0.1-jre'
    implementation 'org.ow2.asm:asm-tree:9.4'
    implementation 'org.ow2.asm:asm-commons:9.4'
    implementation 'org.ow2.asm:asm-util:9.4'
    implementation 'com.google.code.gson:gson:2.10'
    implementation "net.bytebuddy:byte-buddy:1.14.12"
    implementation "net.bytebuddy:byte-buddy-agent:1.14.12"

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation 'com.mikuac:shiro:2.5.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation "com.vladsch.flexmark:flexmark-all:0.64.8"
    implementation "com.microsoft.playwright:playwright:1.44.0"
    implementation "net.sf.jopt-simple:jopt-simple:5.0.4"
    implementation 'com.github.oshi:oshi-core:6.4.0'
    implementation 'com.github.promeg:tinypinyin:2.0.3'
    implementation 'com.github.promeg:tinypinyin-lexicons-java-cncity:2.0.3'
    implementation files("/libs/HuoZiYinShua-1.0.jar")
    implementation files("/libs/mcserverping-1.0.9.jar")
    implementation "com.zaxxer:jnb-ping:3.0.0"
    implementation 'dnsjava:dnsjava:3.6.0'
    implementation "net.md-5:bungeecord-chat:1.16-R0.4"

    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            "--add-modules=jdk.attach",
            "-Djdk.attach.allowAttachSelf=true"
    ]
}